마이페이지 전체적으로 피드백 반영, 공양미 환전 페이지, 회원정보 수정 페이지 js빼고 완성

--- a/src/main/resources/static/css/mypage/my-review.css
+++ b/src/main/resources/static/css/mypage/my-review.css
@@ -1,6 +1,6 @@
 .my-review-wrap {
-    max-width: 850px;
-    margin-left: 103px;
+    max-width: 860px;
+    margin: 0 auto;
 }
 
 .my-review-count-wrap {
