--- a/src/main/resources/templates/mypage/my-question.html
+++ b/src/main/resources/templates/mypage/my-question.html
@@ -80,6 +80,11 @@
                         </span>
                         <span class="header-menu-element">
                             <div class="header-menu-div">
+                                <a href="" class="header-menu-a-select">공양미 환전요청</a>
+                            </div>
+                        </span>
+                        <span class="header-menu-element">
+                            <div class="header-menu-div">
                                 <a href="" class="header-menu-a">회원정보 수정</a>
                             </div>
                         </span>
@@ -101,17 +106,21 @@
                                     <div class="support-request-content">세상을 다 가져봐</div>
                                     <div class="support-request-reply">공양미 100석 후원</div>
                                 </div>
-                                <div class="support-request-detail">
-                                    <button class="go-support-request">
-                                        <span class="request-detail">
-                                            <div class="detail-text">상세보기</div>
-                                        </span>
-                                    </button>
-                                    <!-- <button class="show-answer">
-                                        <span class="request-detail">
-                                            <div class="detail-text">답변확인</div>
-                                        </span>
-                                    </button> -->
+                                <div class="button-class">
+                                    <div class="support-request-detail update">
+                                        <button class="go-support-request">
+                                            <span class="request-detail">
+                                                <div class="detail-text">수정</div>
+                                            </span>
+                                        </button>
+                                    </div>
+                                    <div class="support-request-detail">
+                                        <button class="go-support-request-delete">
+                                            <span class="request-detail">
+                                                <div class="detail-text">삭제</div>
+                                            </span>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -133,17 +142,14 @@
                                     <div class="support-request-content">세상을 다 가져봐</div>
                                     <div class="support-request-reply">공양미 100석 후원</div>
                                 </div>
-                                <div class="support-request-detail">
-                                    <!-- <button class="go-support-request">
-                                        <span class="request-detail">
-                                            <div class="detail-text">상세보기</div>
-                                        </span>
-                                    </button> -->
-                                    <button class="show-answer">
-                                        <span class="request-detail">
-                                            <div class="detail-text">답변확인</div>
-                                        </span>
-                                    </button>
+                                <div class="button-class">
+                                    <div class="support-request-detail">
+                                        <button class="show-answer">
+                                            <span class="request-detail">
+                                                <div class="detail-text">답변확인</div>
+                                            </span>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -165,17 +171,14 @@
                                     <div class="support-request-content">세상을 다 가져봐</div>
                                     <div class="support-request-reply">공양미 100석 후원</div>
                                 </div>
-                                <div class="support-request-detail">
-                                    <!-- <button class="go-support-request">
-                                        <span class="request-detail">
-                                            <div class="detail-text">상세보기</div>
-                                        </span>
-                                    </button> -->
-                                    <button class="show-answer">
-                                        <span class="request-detail">
-                                            <div class="detail-text">답변확인</div>
-                                        </span>
-                                    </button>
+                                <div class="button-class">
+                                    <div class="support-request-detail">
+                                        <button class="show-answer">
+                                            <span class="request-detail">
+                                                <div class="detail-text">답변확인</div>
+                                            </span>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -267,12 +270,11 @@
                                 <span class="change-modal-form-label">내용</span>
                                 <div class="change-modal-form-field">
                                     <div class="change-modal-form-field-container">
-                                        <textarea inputmode="text"
-                                                  class="change-modal-form-field-text"></textarea>
+                                        <textarea inputmode="text" class="change-modal-form-field-text"></textarea>
                                         <span class="change-modal-form-field-content">
-                                                <span style="color: rgb(51, 51, 51);">0자</span>
-                                                <span style="color: rgb(153, 153, 153);"></span>
-                                            </span>
+                                            <span style="color: rgb(51, 51, 51);">0자</span>
+                                            <span style="color: rgb(153, 153, 153);"></span>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -282,7 +284,7 @@
                                 <span class="change-modal-btn">수정</span>
                             </button>
                             <button type="button" class="change-modal-delete-btn">
-                                <span class="change-modal-btn">삭제</span>
+                                <span class="change-modal-btn">취소</span>
                             </button>
                         </div>
                     </div>
