--- a/src/main/resources/static/css/mypage/my-question.css
+++ b/src/main/resources/static/css/mypage/my-question.css
@@ -211,7 +211,36 @@
     font-weight: 500;
 }
 
+.update {
+    margin-bottom: 5px;
+}
+
 .show-answer {
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    border-radius: 1px;
+    border: 1px solid;
+    font-weight: normal;
+    box-sizing: border-box;
+    background-color: rgb(255, 255, 255);
+    color: rgb(255, 87, 87);
+
+    padding: 0px 16px 0px 12px !important;
+
+    display: inline-flex;
+    min-width: 104px;
+    width: 104px;
+    height: 36px;
+    font-size: 16px !important;
+
+    line-height: 27px;
+    letter-spacing: -0.020em;
+    outline: 0;
+}
+
+.go-support-request-delete {
     cursor: pointer;
     align-items: center;
     justify-content: center;
