--- a/src/main/resources/templates/mypage/rice-charge.html
+++ b/src/main/resources/templates/mypage/rice-charge.html
@@ -80,7 +80,12 @@
                         </span>
                         <span class="header-menu-element">
                             <div class="header-menu-div">
-                                <a href="" class="header-menu-a-select">회원정보 수정</a>
+                                <a href="" class="header-menu-a-select">공양미 환전요청</a>
+                            </div>
+                        </span>
+                        <span class="header-menu-element">
+                            <div class="header-menu-div">
+                                <a href="" class="header-menu-a">회원정보 수정</a>
                             </div>
                         </span>
                     </div>
