--- a/src/main/resources/templates/mypage/volunteer-work-list.html
+++ b/src/main/resources/templates/mypage/volunteer-work-list.html
@@ -79,6 +79,11 @@
                         </span>
                         <span class="header-menu-element">
                             <div class="header-menu-div">
+                                <a href="" class="header-menu-a-select">공양미 환전요청</a>
+                            </div>
+                        </span>
+                        <span class="header-menu-element">
+                            <div class="header-menu-div">
                                 <a href="" class="header-menu-a">회원정보 수정</a>
                             </div>
                         </span>
