--- a/src/main/resources/templates/funding/funding-project-plan.html
+++ b/src/main/resources/templates/funding/funding-project-plan.html
@@ -34,18 +34,18 @@
             <div id="_topContent"></div>
 
 
-            <div class="style__Contents-sc-1y2waj3-13 qbVXa" size="277">
-                <div class="style__PlanContents-sc-1mawbc1-6 styled__Content-upxyjo-24 ghVmvY fdWgNc">
+            <div class="contents" size="277">
+                <div class="styled__Content-upxyjo-24 planContents fdWgNc">
                     <div class="styled__TitleWrapper-upxyjo-20 sfObC">
                         <div class="styled__SectionTitle-upxyjo-21 bSEQgt">프로젝트 계획<div name="asterisk-solid"
-                                class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg viewBox="0 0 48 48">
+                                class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg viewBox="0 0 48 48">
                                     <path
                                         d="M20.332 6.1C20.332 6.04477 20.3768 6 20.432 6H27.1968C27.252 6 27.2968 6.04477 27.2968 6.1V18.2295C27.2968 18.3066 27.3803 18.3547 27.447 18.316L37.8336 12.289C37.8815 12.2612 37.9429 12.2777 37.9705 12.3257L41.3532 18.2144C41.3807 18.2622 41.3643 18.3231 41.3167 18.3507L31.0164 24.3277C30.95 24.3662 30.95 24.4622 31.0164 24.5007L40.8186 30.1886C40.8663 30.2163 40.8826 30.2772 40.8552 30.3249L37.4724 36.2137C37.4448 36.2617 37.3834 36.2782 37.3355 36.2504L27.447 30.5124C27.3803 30.4737 27.2968 30.5218 27.2968 30.5989V41.9C27.2968 41.9552 27.252 42 27.1968 42H20.432C20.3768 42 20.332 41.9552 20.332 41.9V30.7012C20.332 30.6241 20.2485 30.576 20.1818 30.6147L10.4697 36.2504C10.4218 36.2782 10.3604 36.2617 10.3328 36.2137L6.95002 30.3249C6.92259 30.2772 6.93892 30.2163 6.98654 30.1886L16.7888 24.5007C16.8552 24.4622 16.8552 24.3662 16.7888 24.3277L6.48846 18.3508C6.44084 18.3231 6.42451 18.2622 6.45194 18.2144L9.8347 12.3257C9.8623 12.2777 9.92369 12.2612 9.9716 12.289L20.1818 18.2137C20.2485 18.2524 20.332 18.2043 20.332 18.1272V6.1Z">
                                     </path>
                                 </svg></div>
                         </div>
                         <div><a class="style__IdeaButton-sc-1mawbc1-4 lekbXK">
-                                <div name="lightbulb-line" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg viewBox="0 0 48 48">
+                                <div name="lightbulb-line" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg viewBox="0 0 48 48">
                                         <path fill-rule="evenodd" clip-rule="evenodd"
                                             d="M30.469 28.1702L31.6199 27.382C34.3726 25.4967 36 22.2707 36 18.2036C36 12.2507 30.5846 7 24 7C17.4154 7 12 12.2507 12 18.2036C12 22.2707 13.6274 25.4967 16.3801 27.382L17.531 28.1702L18.6941 31.9412H29.3059L30.469 28.1702ZM32.2581 35.9412H15.7419L14.1198 30.6821C10.1084 27.9347 8 23.3701 8 18.2036C8 9.80689 15.4485 3 24 3C32.5515 3 40 9.80689 40 18.2036C40 23.3701 37.8916 27.9347 33.8802 30.6821L32.2581 35.9412Z">
                                         </path>
@@ -58,7 +58,7 @@
                         <div class="styled__GuideWrapper-upxyjo-12 kjapul">
                             <div class="styled__GuideInfo-upxyjo-14 kRqCGW">
                                 <div class="styled__GuideTitle-upxyjo-13 kvKWkr">
-                                    <div name="info-2" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg viewBox="0 0 48 48">
+                                    <div name="info-2" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg viewBox="0 0 48 48">
                                             <path fill-rule="evenodd" clip-rule="evenodd"
                                                 d="M4.2 24C4.2 35 13 43.8 24 43.8C35 43.8 43.8 35 43.8 24C43.8 13 35 4.2 24 4.2C13.1 4.2 4.2 13.1 4.2 24ZM2 24C2 11.9 11.9 2 24 2C36.1 2 46 11.9 46 24C46 36.1 36.1 46 24 46C11.9 46 2 36.1 2 24ZM26 14C26 15.1046 25.1046 16 24 16C22.8954 16 22 15.1046 22 14C22 12.8954 22.8954 12 24 12C25.1046 12 26 12.8954 26 14ZM25.3333 36V20H22.6667V36H25.3333Z">
                                             </path>
@@ -96,7 +96,7 @@
                                     </div><button
                                         class="LineButton__Button-sc-1ozfxit-0 cuzeJc styled__ChatGPTButton-upxyjo-11 lltcrw pdc-btn-l"
                                         color="gray80">ChatGPT로 초안 작성</button>
-                                    <div name="info-3" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs" style="cursor: pointer;"><svg
+                                    <div name="info-3" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg" style="cursor: pointer;"><svg
                                             width="12" height="12" viewBox="0 0 12 12" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -109,7 +109,7 @@
                                         </svg></div>
                                 </span>
                                 <div><button open="" class="Accordion__AccordionTittle-zynd31-0 fOsbkJ">프로젝트 소개<i>
-                                            <div name="arrow2-down" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg
+                                            <div name="arrow2-down" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg
                                                     viewBox="0 0 48 48">
                                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                                         d="M2 14.4065C2 13.1363 3.09843 12.0615 4.39657 12.0615C4.99571 12.0615 5.59485 12.257 6.09414 12.7455L23.9685 29.4526L41.843 12.6478C42.8415 11.7684 44.3394 11.7684 45.338 12.7455C46.2367 13.7226 46.2367 15.1882 45.2381 16.0676L23.9685 36L2.79886 16.0676C2.29957 15.6767 2 14.9928 2 14.4065Z">
@@ -131,7 +131,7 @@
                             </div>
                             <div name="budget" class="styled__PlanSection-upxyjo-9 goALXE">
                                 <div><button open="" class="Accordion__AccordionTittle-zynd31-0 fOsbkJ">프로젝트 예산<i>
-                                            <div name="arrow2-down" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg
+                                            <div name="arrow2-down" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg
                                                     viewBox="0 0 48 48">
                                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                                         d="M2 14.4065C2 13.1363 3.09843 12.0615 4.39657 12.0615C4.99571 12.0615 5.59485 12.257 6.09414 12.7455L23.9685 29.4526L41.843 12.6478C42.8415 11.7684 44.3394 11.7684 45.338 12.7455C46.2367 13.7226 46.2367 15.1882 45.2381 16.0676L23.9685 36L2.79886 16.0676C2.29957 15.6767 2 14.9928 2 14.4065Z">
@@ -173,7 +173,7 @@
                             </div>
                             <div name="schedule" class="styled__PlanSection-upxyjo-9 goALXE">
                                 <div><button open="" class="Accordion__AccordionTittle-zynd31-0 fOsbkJ">프로젝트 일정<i>
-                                            <div name="arrow2-down" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg
+                                            <div name="arrow2-down" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg
                                                     viewBox="0 0 48 48">
                                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                                         d="M2 14.4065C2 13.1363 3.09843 12.0615 4.39657 12.0615C4.99571 12.0615 5.59485 12.257 6.09414 12.7455L23.9685 29.4526L41.843 12.6478C42.8415 11.7684 44.3394 11.7684 45.338 12.7455C46.2367 13.7226 46.2367 15.1882 45.2381 16.0676L23.9685 36L2.79886 16.0676C2.29957 15.6767 2 14.9928 2 14.4065Z">
@@ -203,7 +203,7 @@
                             </div>
                             <div name="introduction" class="styled__PlanSection-upxyjo-9 goALXE">
                                 <div><button open="" class="Accordion__AccordionTittle-zynd31-0 fOsbkJ">프로젝트 팀 소개<i>
-                                            <div name="arrow2-down" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg
+                                            <div name="arrow2-down" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg
                                                     viewBox="0 0 48 48">
                                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                                         d="M2 14.4065C2 13.1363 3.09843 12.0615 4.39657 12.0615C4.99571 12.0615 5.59485 12.257 6.09414 12.7455L23.9685 29.4526L41.843 12.6478C42.8415 11.7684 44.3394 11.7684 45.338 12.7455C46.2367 13.7226 46.2367 15.1882 45.2381 16.0676L23.9685 36L2.79886 16.0676C2.29957 15.6767 2 14.9928 2 14.4065Z">
@@ -219,7 +219,7 @@
                             </div>
                             <div name="rewardsDescription" class="styled__PlanSection-upxyjo-9 goALXE">
                                 <div><button open="" class="Accordion__AccordionTittle-zynd31-0 fOsbkJ">선물 설명<i>
-                                            <div name="arrow2-down" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg
+                                            <div name="arrow2-down" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg
                                                     viewBox="0 0 48 48">
                                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                                         d="M2 14.4065C2 13.1363 3.09843 12.0615 4.39657 12.0615C4.99571 12.0615 5.59485 12.257 6.09414 12.7455L23.9685 29.4526L41.843 12.6478C42.8415 11.7684 44.3394 11.7684 45.338 12.7455C46.2367 13.7226 46.2367 15.1882 45.2381 16.0676L23.9685 36L2.79886 16.0676C2.29957 15.6767 2 14.9928 2 14.4065Z">
