--- a/src/main/resources/static/css/funding/response.css
+++ b/src/main/resources/static/css/funding/response.css
@@ -1,17 +1,17 @@
 @media (min-width: 1080px){
-    .qbVXa {
+    .contents {
         width: 100%;
         max-width: 1080px;
         margin: 0px auto;
     }
 }
 @media (min-width: 1080px){
-    .ghVmvY {
+    .planContents {
         padding: 84px 0px 0px;
     }
 }
 @media (min-width: 1080px){
-    .fGfROL {
+    .projectWrap {
         display: flex;
         padding-bottom: 48px;
         margin-bottom: 56px;
@@ -20,7 +20,7 @@
     }
 }
 @media (min-width: 1080px){
-    .gjLASS {
+    .projectInfoTitle {
         font-weight: 700;
         margin-bottom: 12px;
         font-size: 16px !important;
@@ -29,12 +29,12 @@
     }
 }
 @media (min-width: 1080px){
-    .gJNjvn {
+    .projectInfoNotice {
         margin-top: 25px;
     }
 }
 @media (min-width: 1080px){
-    .etypUj {
+    .projectForm {
         display: flex;
         -webkit-box-pack: justify;
         justify-content: space-between;
@@ -98,7 +98,7 @@
     }
 }
 @media (min-width: 1080px){
-    .kwDByH {
+    .projectInfo {
         margin: 0px 0px 14px;
         width: 351px;
     }
@@ -183,7 +183,6 @@
     }
 }
 @media (min-width: 1080px){
-
     .storyContent p {
         font-size: 16px;
         line-height: 28px;
