--- a/src/main/resources/templates/funding/funding-creater-info.html
+++ b/src/main/resources/templates/funding/funding-creater-info.html
@@ -33,22 +33,22 @@
             <div id="_header"></div>
             <div id="_topContent"></div>
 
-            <div class="style__Contents-sc-1y2waj3-13 qbVXa" size="228">
-                <div class="style__PlanContents-sc-1mawbc1-6 ghVmvY">
-                    <div class="ProjectItem__ProjectItemWrap-sc-1vwy8z0-0 fGfROL">
-                        <dl class="ProjectItem__ProjectInfo-sc-1vwy8z0-1 kwDByH">
-                            <dt class="ProjectItem__ProjectInfoTitle-sc-1vwy8z0-2 gjLASS">창작자 이름<div name="asterisk-solid"
-                                    class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg viewBox="0 0 48 48">
+            <div class="contents" size="228">
+                <div class="planContents">
+                    <div class="projectWrap">
+                        <dl class="ProjectItem__ProjectInfo-sc-1vwy8z0-1 projectInfo">
+                            <dt class="ProjectItem__ProjectInfoTitle-sc-1vwy8z0-2 projectInfoTitle">창작자 이름<div name="asterisk-solid"
+                                    class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg viewBox="0 0 48 48">
                                         <path
                                             d="M20.332 6.1C20.332 6.04477 20.3768 6 20.432 6H27.1968C27.252 6 27.2968 6.04477 27.2968 6.1V18.2295C27.2968 18.3066 27.3803 18.3547 27.447 18.316L37.8336 12.289C37.8815 12.2612 37.9429 12.2777 37.9705 12.3257L41.3532 18.2144C41.3807 18.2622 41.3643 18.3231 41.3167 18.3507L31.0164 24.3277C30.95 24.3662 30.95 24.4622 31.0164 24.5007L40.8186 30.1886C40.8663 30.2163 40.8826 30.2772 40.8552 30.3249L37.4724 36.2137C37.4448 36.2617 37.3834 36.2782 37.3355 36.2504L27.447 30.5124C27.3803 30.4737 27.2968 30.5218 27.2968 30.5989V41.9C27.2968 41.9552 27.252 42 27.1968 42H20.432C20.3768 42 20.332 41.9552 20.332 41.9V30.7012C20.332 30.6241 20.2485 30.576 20.1818 30.6147L10.4697 36.2504C10.4218 36.2782 10.3604 36.2617 10.3328 36.2137L6.95002 30.3249C6.92259 30.2772 6.93892 30.2163 6.98654 30.1886L16.7888 24.5007C16.8552 24.4622 16.8552 24.3662 16.7888 24.3277L6.48846 18.3508C6.44084 18.3231 6.42451 18.2622 6.45194 18.2144L9.8347 12.3257C9.8623 12.2777 9.92369 12.2612 9.9716 12.289L20.1818 18.2137C20.2485 18.2524 20.332 18.2043 20.332 18.1272V6.1Z">
                                         </path>
                                     </svg></div>
                             </dt>
-                            <dd class="ProjectItem__ProjectInfoDescription-sc-1vwy8z0-3 kbTFwt">창작자 개인이나 팀을 대표할 수 있는 이름을 써주세요.</dd>
+                            <dd class="ProjectItem__ProjectInfoDescription-sc-1vwy8z0-3 projectInfoDescription">창작자 개인이나 팀을 대표할 수 있는 이름을 써주세요.</dd>
                         </dl>
-                        <div class="ProjectItem__ProjectForms-sc-1vwy8z0-4 etypUj">
+                        <div class="ProjectItem__ProjectForms-sc-1vwy8z0-4 projectForm">
                             <div class="style__ProjectFormsWrap-sc-1mawbc1-13 enzGlj">
-                                <div class="InputWithGuideAndLengthCheck__Wrapper-sc-9nmfrw-0 eCSxwJ">
+                                <div class="InputWithGuideAndLengthCheck__Wrapper-sc-9nmfrw-0 guideCheckWrapper">
                                     <div class="InputWithGuideAndLengthCheck__InputWrapper-sc-9nmfrw-3 bBnjVq"><span
                                             class="Input__InputWrapper-j7moqy-0 dXKaPI InputWithGuideAndLengthCheck__StyledInput-sc-9nmfrw-1 wmJOZ"><input
                                                 type="text" inputmode="text" placeholder="창작자님의 이름을 입력해주세요" autocomplete="off"
@@ -62,20 +62,20 @@
                             </div>
                         </div>
                     </div>
-                    <div class="ProjectItem__ProjectItemWrap-sc-1vwy8z0-0 fGfROL">
-                        <dl class="ProjectItem__ProjectInfo-sc-1vwy8z0-1 kwDByH">
-                            <dt class="ProjectItem__ProjectInfoTitle-sc-1vwy8z0-2 gjLASS">창작자 소개<div name="asterisk-solid"
-                                    class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg viewBox="0 0 48 48">
+                    <div class="projectWrap">
+                        <dl class="ProjectItem__ProjectInfo-sc-1vwy8z0-1 projectInfo">
+                            <dt class="ProjectItem__ProjectInfoTitle-sc-1vwy8z0-2 projectInfoTitle">창작자 소개<div name="asterisk-solid"
+                                    class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg viewBox="0 0 48 48">
                                         <path
                                             d="M20.332 6.1C20.332 6.04477 20.3768 6 20.432 6H27.1968C27.252 6 27.2968 6.04477 27.2968 6.1V18.2295C27.2968 18.3066 27.3803 18.3547 27.447 18.316L37.8336 12.289C37.8815 12.2612 37.9429 12.2777 37.9705 12.3257L41.3532 18.2144C41.3807 18.2622 41.3643 18.3231 41.3167 18.3507L31.0164 24.3277C30.95 24.3662 30.95 24.4622 31.0164 24.5007L40.8186 30.1886C40.8663 30.2163 40.8826 30.2772 40.8552 30.3249L37.4724 36.2137C37.4448 36.2617 37.3834 36.2782 37.3355 36.2504L27.447 30.5124C27.3803 30.4737 27.2968 30.5218 27.2968 30.5989V41.9C27.2968 41.9552 27.252 42 27.1968 42H20.432C20.3768 42 20.332 41.9552 20.332 41.9V30.7012C20.332 30.6241 20.2485 30.576 20.1818 30.6147L10.4697 36.2504C10.4218 36.2782 10.3604 36.2617 10.3328 36.2137L6.95002 30.3249C6.92259 30.2772 6.93892 30.2163 6.98654 30.1886L16.7888 24.5007C16.8552 24.4622 16.8552 24.3662 16.7888 24.3277L6.48846 18.3508C6.44084 18.3231 6.42451 18.2622 6.45194 18.2144L9.8347 12.3257C9.8623 12.2777 9.92369 12.2612 9.9716 12.289L20.1818 18.2137C20.2485 18.2524 20.332 18.2043 20.332 18.1272V6.1Z">
                                         </path>
                                     </svg></div>
                             </dt>
-                            <dd class="ProjectItem__ProjectInfoDescription-sc-1vwy8z0-3 kbTFwt">2~3문장으로 창작자님의 이력과 간단한 소개를 써주세요.</dd>
+                            <dd class="ProjectItem__ProjectInfoDescription-sc-1vwy8z0-3 projectInfoDescription">2~3문장으로 창작자님의 이력과 간단한 소개를 써주세요.</dd>
                         </dl>
-                        <div class="ProjectItem__ProjectForms-sc-1vwy8z0-4 etypUj">
+                        <div class="ProjectItem__ProjectForms-sc-1vwy8z0-4 projectForm">
                             <div class="style__ProjectFormsWrap-sc-1mawbc1-13 enzGlj">
-                                <div class="InputWithGuideAndLengthCheck__Wrapper-sc-9nmfrw-0 eCSxwJ">
+                                <div class="InputWithGuideAndLengthCheck__Wrapper-sc-9nmfrw-0 guideCheckWrapper">
                                     <div class="InputWithGuideAndLengthCheck__InputWrapper-sc-9nmfrw-3 jcLEQH">
                                         <div
                                             class="Textarea__Wrapper-sc-1mj6ym2-0 dCdIbF InputWithGuideAndLengthCheck__StyledTextarea-sc-9nmfrw-2 dUzqeP">
@@ -91,24 +91,24 @@
                         </div>
                     </div>
                     
-                    <div class="ProjectItem__ProjectItemWrap-sc-1vwy8z0-0 fGfROL">
-                        <dl class="ProjectItem__ProjectInfo-sc-1vwy8z0-1 kwDByH">
-                            <dt class="ProjectItem__ProjectInfoTitle-sc-1vwy8z0-2 gjLASS">본인 인증<div name="locked-solid"
-                                    class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg viewBox="0 0 48 48">
+                    <div class="projectWrap">
+                        <dl class="ProjectItem__ProjectInfo-sc-1vwy8z0-1 projectInfo">
+                            <dt class="ProjectItem__ProjectInfoTitle-sc-1vwy8z0-2 projectInfoTitle">본인 인증<div name="locked-solid"
+                                    class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg viewBox="0 0 48 48">
                                         <path fill-rule="evenodd" clip-rule="evenodd"
                                             d="M15 17H9.2C9.08954 17 9 17.0895 9 17.2V40.8C9 40.8 9.08954 41 9.2 41H38.8C38.9105 41 39 40.9105 39 40.8V17.2C39 17.0895 38.9105 17 38.8 17H33V13C33 8.02944 28.9706 4 24 4C19.0294 4 15 8.02943 15 13V17ZM20.6 17H27.4V13C27.4 11.1222 25.8778 9.6 24 9.6C22.1222 9.6 20.6 11.1222 20.6 13V17Z">
                                         </path>
                                     </svg></div>
                             </dt>
-                            <dd class="ProjectItem__ProjectInfoDescription-sc-1vwy8z0-3 kbTFwt">창작자 본인 명의의 휴대폰 번호로 인증해주세요.</dd>
+                            <dd class="ProjectItem__ProjectInfoDescription-sc-1vwy8z0-3 projectInfoDescription">창작자 본인 명의의 휴대폰 번호로 인증해주세요.</dd>
                         </dl>
-                        <div class="ProjectItem__ProjectForms-sc-1vwy8z0-4 etypUj">
+                        <div class="ProjectItem__ProjectForms-sc-1vwy8z0-4 projectForm">
                             <div class="style__ProjectFormsWrap-sc-1mawbc1-13 enzGlj">
                                 <div class="style__AuthWrap-sc-1mawbc1-21 psjim">
                                     <div class="info">
                                         <div class="authInfo">
                                             <div class="authType">
-                                                <div name="avatar-solid" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg
+                                                <div name="avatar-solid" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg
                                                         viewBox="0 0 48 48">
                                                         <path fill-rule="evenodd" clip-rule="evenodd"
                                                             d="M34.2448 14C34.2448 19.5141 29.6508 24.0001 24.0008 24.0001C18.3528 24.0001 13.7568 19.5141 13.7568 14C13.7568 8.48602 18.3528 4 24.0008 4C29.6508 4 34.2448 8.48602 34.2448 14ZM19.722 28.7619H28.28C36.948 28.7619 44 35.598 44 44H41.074H6.924H4C4 35.598 11.052 28.7619 19.722 28.7619Z">
@@ -119,7 +119,7 @@
                                         </div><button
                                             class="LineButton__Button-sc-1ozfxit-0 euVqTZ style__AuthButton-sc-1mawbc1-24 gEVqSR pdc-btn-m"
                                             disabled="" color="grayEditor200">
-                                            <div name="check" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg viewBox="0 0 48 48">
+                                            <div name="check" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg viewBox="0 0 48 48">
                                                     <path fill-rule="evenodd" clip-rule="evenodd"
                                                         d="M41.6 8L18.9 30.8L6.2 19L2 23.5L19.1 39.4L46 12.4L41.6 8Z"></path>
                                                 </svg></div>인증 완료
@@ -129,25 +129,25 @@
                             </div>
                         </div>
                     </div>
-                    <div class="ProjectItem__ProjectItemWrap-sc-1vwy8z0-0 fGfROL">
-                        <dl class="ProjectItem__ProjectInfo-sc-1vwy8z0-1 kwDByH">
-                            <dt class="ProjectItem__ProjectInfoTitle-sc-1vwy8z0-2 gjLASS">입금 계좌<div name="asterisk-solid"
-                                    class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg viewBox="0 0 48 48">
+                    <div class="projectWrap">
+                        <dl class="ProjectItem__ProjectInfo-sc-1vwy8z0-1 projectInfo">
+                            <dt class="ProjectItem__ProjectInfoTitle-sc-1vwy8z0-2 projectInfoTitle">입금 계좌<div name="asterisk-solid"
+                                    class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg viewBox="0 0 48 48">
                                         <path
                                             d="M20.332 6.1C20.332 6.04477 20.3768 6 20.432 6H27.1968C27.252 6 27.2968 6.04477 27.2968 6.1V18.2295C27.2968 18.3066 27.3803 18.3547 27.447 18.316L37.8336 12.289C37.8815 12.2612 37.9429 12.2777 37.9705 12.3257L41.3532 18.2144C41.3807 18.2622 41.3643 18.3231 41.3167 18.3507L31.0164 24.3277C30.95 24.3662 30.95 24.4622 31.0164 24.5007L40.8186 30.1886C40.8663 30.2163 40.8826 30.2772 40.8552 30.3249L37.4724 36.2137C37.4448 36.2617 37.3834 36.2782 37.3355 36.2504L27.447 30.5124C27.3803 30.4737 27.2968 30.5218 27.2968 30.5989V41.9C27.2968 41.9552 27.252 42 27.1968 42H20.432C20.3768 42 20.332 41.9552 20.332 41.9V30.7012C20.332 30.6241 20.2485 30.576 20.1818 30.6147L10.4697 36.2504C10.4218 36.2782 10.3604 36.2617 10.3328 36.2137L6.95002 30.3249C6.92259 30.2772 6.93892 30.2163 6.98654 30.1886L16.7888 24.5007C16.8552 24.4622 16.8552 24.3662 16.7888 24.3277L6.48846 18.3508C6.44084 18.3231 6.42451 18.2622 6.45194 18.2144L9.8347 12.3257C9.8623 12.2777 9.92369 12.2612 9.9716 12.289L20.1818 18.2137C20.2485 18.2524 20.332 18.2043 20.332 18.1272V6.1Z">
                                         </path>
                                     </svg></div>
                             </dt>
-                            <dd class="ProjectItem__ProjectInfoDescription-sc-1vwy8z0-3 kbTFwt">후원금을 전달받을 계좌를 등록해주세요. 법인사업자는 법인계좌로만
+                            <dd class="ProjectItem__ProjectInfoDescription-sc-1vwy8z0-3 projectInfoDescription">후원금을 전달받을 계좌를 등록해주세요. 법인사업자는 법인계좌로만
                                 정산받을 수 있습니다.</dd>
                         </dl>
-                        <div class="ProjectItem__ProjectForms-sc-1vwy8z0-4 etypUj">
+                        <div class="ProjectItem__ProjectForms-sc-1vwy8z0-4 projectForm">
                             <div class="style__ProjectFormsWrap-sc-1mawbc1-13 enzGlj">
                                 <div class="style__AuthWrap-sc-1mawbc1-21 psjim">
                                     <div class="info">
                                         <div class="authInfo">
                                             <div class="authType">
-                                                <div name="bank-solid" class="Icon__SVGICON-sc-1xkf9cp-0 ccxeYs"><svg
+                                                <div name="bank-solid" class="Icon__SVGICON-sc-1xkf9cp-0 icon-svg"><svg
                                                         viewBox="0 0 48 48">
                                                         <path d="M20.0936 28.5294L19.5831 25.8936H20.677L20.0936 28.5294Z"></path>
                                                         <path d="M24.2738 21.605L23.7904 23.8511H24.7573L24.2738 21.605Z"></path>
